--- a/glitch/index.html
+++ b/glitch/index.html
@@ -11,6 +11,11 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <title>Glitch</title>
+  <style>
+    canvas {
+  border-radius: 200px 100px 100px 200px;
+    }
+  </style>
 
 </head>
 <body>
