--- a/skill/index.html
+++ b/skill/index.html
@@ -46,7 +46,7 @@
 		</div>
 	</li>
 </ul>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script src="js/index.js"></script>
 
