--- a/index.html
+++ b/index.html
@@ -1,53 +1,246 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>NAIVESOUND</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="styles.css" rel="stylesheet" type="text/css" />
-	<body>
+  <title></title>
+  <meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="../styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+</head>
+<body onLoad="init()">
+  <!--<div class="container">
+    <a href="https://github.com/scienceai/neocortex" target="_blank" class="github-corner"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#F4B350; color:#fff; position: absolute; top: 0; border: 0; right: 0;"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
+    <div class="title" data-sr="enter bottom over 2s and move 30px">CIFAR-10 convolutional neural network</div>
+    <div class="description" data-sr="enter right over 2s and move 20px">
+      <p>This is a demo of a basic convolutional neural network on the CIFAR-10 dataset. The model based on VGGNet consists of 6 convolution layers with leaky ReLU activation units, 3 max-pooling layers with dropout, and 2 fully-connected dense layers, with final softmax for classification into 10 classes. Offline test accuracy of this simple model was around 85%, trained without any image augmentation. The architecture and weights of the model were serialized from a trained <a href="http://keras.io" target="_blank">Keras</a> model into a JSON file, which is then used to run the neural network <strong><em>in your browser</em></strong>, on-the-fly with the loaded sample images (prediction isn't called until sample images are loaded). Five sample images are randomly loaded per button-click below. This demo utilizes Web Workers to run the neural networks.</p>
+    </div>-->
+    <div class="button-wrapper">
+      <div class="button" onClick="loadSamples()">другие изображения</div>
+    </div>
+    <div class="samples">
+      <div class="sample">
+        <canvas id="sample0" width="96" height="96"></canvas>
+        <p>
+          <span id="sample0_pred0">-</span><br><span class="bar-left" id="sample0_prob0_left"></span><span class="bar-right" id="sample0_prob0_right"></span>
+        </p>
+        <p>
+          <span id="sample0_pred1">-</span><br><span class="bar-left" id="sample0_prob1_left"></span><span class="bar-right" id="sample0_prob1_right"></span>
+        </p>
+        <p>
+          <span id="sample0_pred2">-</span><br><span class="bar-left" id="sample0_prob2_left"></span><span class="bar-right" id="sample0_prob2_right"></span>
+        </p>
+      </div>
+      <div class="sample">
+        <canvas id="sample1" width="96" height="96"></canvas>
+        <p>
+          <span id="sample1_pred0">-</span><br><span class="bar-left" id="sample1_prob0_left"></span><span class="bar-right" id="sample1_prob0_right"></span>
+        </p>
+        <p>
+          <span id="sample1_pred1">-</span><br><span class="bar-left" id="sample1_prob1_left"></span><span class="bar-right" id="sample1_prob1_right"></span>
+        </p>
+        <p>
+          <span id="sample1_pred2">-</span><br><span class="bar-left" id="sample1_prob2_left"></span><span class="bar-right" id="sample1_prob2_right"></span>
+        </p>
+      </div>
+      <div class="sample">
+        <canvas id="sample2" width="96" height="96"></canvas>
+        <p>
+          <span id="sample2_pred0">-</span><br><span class="bar-left" id="sample2_prob0_left"></span><span class="bar-right" id="sample2_prob0_right"></span>
+        </p>
+        <p>
+          <span id="sample2_pred1">-</span><br><span class="bar-left" id="sample2_prob1_left"></span><span class="bar-right" id="sample2_prob1_right"></span>
+        </p>
+        <p>
+          <span id="sample2_pred2">-</span><br><span class="bar-left" id="sample2_prob2_left"></span><span class="bar-right" id="sample2_prob2_right"></span>
+        </p>
+      </div>
+      <div class="sample">
+        <canvas id="sample3" width="96" height="96"></canvas>
+        <p>
+          <span id="sample3_pred0">-</span><br><span class="bar-left" id="sample3_prob0_left"></span><span class="bar-right" id="sample3_prob0_right"></span>
+        </p>
+        <p>
+          <span id="sample3_pred1">-</span><br><span class="bar-left" id="sample3_prob1_left"></span><span class="bar-right" id="sample3_prob1_right"></span>
+        </p>
+        <p>
+          <span id="sample3_pred2">-</span><br><span class="bar-left" id="sample3_prob2_left"></span><span class="bar-right" id="sample3_prob2_right"></span>
+        </p>
+      </div>
+      <div class="sample">
+        <canvas id="sample4" width="96" height="96"></canvas>
+        <p>
+          <span id="sample4_pred0">-</span><br><span class="bar-left" id="sample4_prob0_left"></span><span class="bar-right" id="sample4_prob0_right"></span>
+        </p>
+        <p>
+          <span id="sample4_pred1">-</span><br><span class="bar-left" id="sample4_prob1_left"></span><span class="bar-right" id="sample4_prob1_right"></span>
+        </p>
+        <p>
+          <span id="sample4_pred2">-</span><br><span class="bar-left" id="sample4_prob2_left"></span><span class="bar-right" id="sample4_prob2_right"></span>
+        </p>
+      </div>
+    </div>
+    <div class="loader">
+      <div class="loader-squares">
+        <div class="square first"></div>
+        <div class="square second"></div>
+        <div class="square third"></div>
+        <div class="square fourth"></div>
+      </div>
+      <div class="loader-text">загрузка . . . </div>
+    </div>
+   <!-- <div class="nav">
+      <div class="back" data-sr="enter left over 2s and move 20px"><a href="../index.html"><i class="fa fa-arrow-circle-left fa-2x"></i><br>More Examples</a></div>
+    </div>
+  </div>-->
+  <!--<div class="copyright">&copy; 2015 <a href="https://science.ai" target="_blank">science.ai</a><br>
+    Maintained by <a href="https://twitter.com/transcranial" target="_blank">@transcranial</a> | Code licensed under <a href="https://github.com/scienceai/neocortex/blob/master/LICENSE" target="_blank">Apache 2.0</a>
+  </div>-->
 
-		<div class="social-links">
-			<a href="https://twitter.com/naive_sound">Twitter</a>
-			<a href="https://medium.com/@naive_sound">Medium</a>
-			<a href="https://github.com/naivesound">Github</a>
-		</div>
+  <!----------- SCRIPTS ------------>
 
-		<div class="headline">
-			<h1>NAIVESOUND</h1>
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 992 800 60" class="line" preserveAspectRatio="none">
-				<path
-				d="m 0,1022.3751 126.28714,-0.01 c 1.09822,0 3.61266,-0.1466 3.61266,-4.2855 0,0 -0.26863,-2 2,-2 2.26863,0 2,2 2,2 l 0,10.5511 c 0,0 -0.0477,2 2,2 2.0477,0 2,-2 2,-2 l 0,-14.5511 c 0,0 -0.25531,-2 2,-2 2.25531,0 2,2 2,2 l 0,16.5511 c 0,0 -0.19281,2 2,2 2.19281,0 2,-2 2,-2 l 0,-14.5511 c 0,0 -0.31283,-2 2,-2 2.31283,0 2,2 2,2 l 0,10.5511 c 0,0 -0.22444,2 2,2 2.22444,0 2,-2 2,-2 l 0,-4.5511 c 0,0 -0.13031,-2 2,-2 2.13031,0 2,2 2,2 l 0,6.5511 c 0,0 -0.15815,2 2,2 2.15815,0 2,-2 2,-2 l 0,-18.5511 c 0,0 -0.14861,-2 2,-2 2.14861,0 2,2 2,2 l 0,24.5511 c 0,0 -0.12365,2 2,2 2.12365,0 1.9671,-2.01 2,-2 l 0,-20.5511 c 0,0 -0.25531,-2 2,-2 2.25531,0 2,2 2,2 l 0,16.5511 c 0,0 -0.26042,2 2,2 2.26042,0 2,-2 2,-2 l 0,-34.55115 c 0,0 -0.28656,-2 2,-2 2.28656,0 2,2 2,2 l 0,52.55115 c 0,0 -0.0991,2 2,2 2.09906,0 2,-2 2,-2 l 0,-42.5511 c 0,0 -0.13031,-2 2,-2 2.13031,0 2,2 2,2 0,4.1837 0,28.3674 0,32.5511 0,0 -0.28656,2 2,2 2.28656,0 2,-2 2,-2 l 0,-24.5511 c 0,0 -0.13031,-2 2,-2 2.13031,0 2,2 2,2 l 0,16.5511 c 0,0 -0.16156,2 2,2 2.16156,0 2,-2 2,-2 l 0,-14.5511 c 0,0 -0.0991,-2 2,-2 2.09906,0 2,2 2,2 l 0,12.5511 c 0,0 -0.22406,2 2,2 2.22406,0 2,-2 2,-2 l 0,-8.5511 c 0,0 -0.19281,-2 2,-2 2.19281,0 2,2 2,2 0.0568,2.692 2.53272,2.2885 3.0501,2.2885 L 800,1022.3811"
-				style="fill:none;stroke:#ffffff;stroke-width:3;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:0.9;stroke-dasharray:none;vector-effect:non-scaling-stroke"
-				sodipodi:nodetypes="ccczcczcczcczcczcczcczcczcczcczcczcczcczcczcczcczcczcczcczcczcczccc" />
-			</svg>
-		</div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+  <script>
+    'use strict';
 
-		<div class="products">
-			<div class="row">
-				<div class="col col-md-3 col-xs-12 center-xs col-md-offset-9 end-sm">
-					<a class="product" href="/glitch">
-						<div>
-							<h2>
-								<span class="selection">GLITCH</span>
-							</h2>
-							<p><span class="selection">
-									Environment for making algorithmic music and live coding, it
-									uses arithmetics to create musical patterns and sounds
-							</span></p>
-						</div>
-					</a>
-				</div>
-			</div>
-		</div>
+    let SAMPLE_DATA;
+    let workers = [];
 
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-					m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-			ga('create', 'UA-33644825-3', 'auto');
-			ga('send', 'pageview');
-		</script>
-	</body>
+    function init() {
+      for (let i = 0; i < 5; i++) {
+        let worker = new Worker('worker.js');
+        worker.onmessage = function(e) {
+          if ('predictions' in e.data) {
+            showPredictions(e.data.sampleNum, e.data.predictions, e.data.sampleLabel)
+          }
+        }
+        workers.push(worker);
+      }
+
+      $.getJSON('https://s3.amazonaws.com/neocortex-js/examples-data/cifar10_cnn_sample_data.json.gz', function(samples) {
+        $('.loader').fadeOut();
+        $('.button-wrapper').css('display', 'block');
+        $('.samples').css('display', 'block');
+
+        SAMPLE_DATA = samples;
+        loadSamples();
+      });
+    }
+
+
+    function loadSamples() {
+      [0, 1, 2, 3, 4].forEach(function(sampleNum) {
+        // get random sample image
+        let randIdx = Math.floor(Math.random() * SAMPLE_DATA.data.length);
+        let sampleData = SAMPLE_DATA.data[randIdx];
+        let sampleLabel = SAMPLE_DATA.labels[randIdx];
+
+        workers[sampleNum].postMessage({
+          sampleNum: sampleNum,
+          sampleData: sampleData,
+          sampleLabel: sampleLabel
+        });
+
+        clearPredictions(sampleNum);
+        drawSample(sampleNum, sampleData);
+      });
+    }
+
+
+    function drawSample(sampleNum, sampleData) {
+      let c = document.getElementById(`sample${sampleNum}`);
+      let ctx = c.getContext('2d');
+      ctx.clearRect(0, 0, c.width, c.height);
+      let imgData = ctx.createImageData(32, 32);
+
+      let pos = 0;
+      for (let i = 0; i < 32; i++) {
+        for (let j = 0; j < 32; j++) {
+          imgData.data[pos+0] = 255 * sampleData[0][i][j];
+          imgData.data[pos+1] = 255 * sampleData[1][i][j];
+          imgData.data[pos+2] = 255 * sampleData[2][i][j];
+          imgData.data[pos+3] = 255;
+          pos += 4;
+        }
+      }
+      ctx.putImageData(imgData, 0, 0);
+
+      // resize image 300% (context needs to be scaled back down to 100% for next paint)
+      let imageObject = new Image();
+      imageObject.onload = function() {
+        ctx.clearRect(0, 0, c.width, c.height);
+        ctx.scale(3, 3);
+        ctx.drawImage(imageObject, 0, 0);
+        ctx.setTransform(1, 0, 0, 1, 0, 0);
+      }
+      imageObject.src = c.toDataURL();
+    }
+
+
+    function clearPredictions(sampleNum) {
+      [0, 1, 2].forEach(function(k) {
+        let $pred = document.getElementById(`sample${sampleNum}_pred${k}`);
+        let $probLeft = document.getElementById(`sample${sampleNum}_prob${k}_left`);
+        let $probRight = document.getElementById(`sample${sampleNum}_prob${k}_right`);
+
+        $pred.innerHTML = '-';
+        $probLeft.style.width = '0px';
+        $probRight.style.width = '96px';
+        $pred.style.color = '#AAAAAA';
+      });
+    }
+
+
+    function showPredictions(sampleNum, predictions, sampleLabel) {
+      const CIFAR10_CLASSES = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck'];
+
+      let predClasses = predictions.map(function(probability, i) {
+        return {
+          class: CIFAR10_CLASSES[i],
+          probability: probability,
+          isCorrect: sampleLabel == i
+        };
+      });
+
+      predClasses.sort(function(a, b) {
+        return b.probability - a.probability;
+      });
+
+      // display top-3 results
+      [0, 1, 2].forEach(function(k) {
+        let $pred = document.getElementById(`sample${sampleNum}_pred${k}`);
+        let $probLeft = document.getElementById(`sample${sampleNum}_prob${k}_left`);
+        let $probRight = document.getElementById(`sample${sampleNum}_prob${k}_right`);
+
+        $pred.innerHTML = predClasses[k].class;
+        $probLeft.style.width = Math.floor(96 * predClasses[k].probability) + 'px';
+        $probRight.style.width = Math.ceil(96 - 96 * predClasses[k].probability) + 'px';
+
+        if (predClasses[k].isCorrect) {
+          if (k === 0) {
+            $pred.style.color = '#3FC380';
+            $probLeft.style.backgroundColor = '#3FC380';
+          } else {
+            $pred.style.color = '#E74C3C';
+            $probLeft.style.backgroundColor = '#E74C3C';
+          }
+        } else {
+          $pred.style.color = '#AAAAAA';
+          $probLeft.style.backgroundColor = '#AAAAAA';
+        }
+      });
+    }
+
+  </script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/2.3.2/scrollReveal.min.js"></script>
+  <script>
+    (function() {
+      window.sr= new scrollReveal({
+        reset: true,
+        mobile: true,
+        vFactor: 0.2
+      });
+    })();
+  </script>
+</body>
 </html>
