--- a/brain/nnTest.html
+++ b/brain/nnTest.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MNIST Digits Simples</title>
+    <title></title>
     <!-- script src="./node_modules/mnist/dist/mnist.js"></script-->
     <script src="./lib/sketchpad.js?v1.1"></script>
     <script src="./dist/build.js"></script>
@@ -38,26 +38,13 @@
     </style>
 </head>
 <body>
-    <h1>Recognizing hand-written digits from MNIST dataset with Brain.js. Neural Networks live example.</h1>
-    <p>
-    Draw a digit in the box below and click the "recognize" button.
-    </p>
-    <br/>
-    <div id="container">
+      <div id="container">
         <canvas id="sketchpad" width="280" height="280">Sorry, your browser is not supported.</canvas>
         <canvas id="thumbnail" width="28" height="28">Sorry, your browser is not supported.</canvas>
         <div id="result"></div>
         <div style="clear: right"></div>
     </div>
-    <button type="button" id="sketchClearButton">Clear</button>
-    <button type="button" id="sketchRecogniseButton">Recognise</button>
-
-    <br/>
-    <br/>
-    <br/>
-    <p>
-        More info about this simple <a href="https://github.com/ApelSYN/mnist_brain">https://github.com/ApelSYN/mnist_brain</a>
-    </p>
-
+    <button type="button" id="sketchClearButton">стереть</button>
+    <button type="button" id="sketchRecogniseButton">распознать</button>
 </body>
 </html>
