--- a/brain/nnTest.html
+++ b/brain/nnTest.html
@@ -39,8 +39,8 @@
 </head>
 <body>
       <div id="container">
-        <canvas id="sketchpad" width="280" height="280">Sorry, your browser is not supported.</canvas>
-        <canvas id="thumbnail" width="28" height="28">Sorry, your browser is not supported.</canvas>
+        <canvas id="sketchpad" width="280" height="280">ошибка.</canvas>
+        <canvas id="thumbnail" width="28" height="28">ошибка.</canvas>
         <div id="result"></div>
         <div style="clear: right"></div>
     </div>
