--- a/CodeLock/RSS/index.html
+++ b/CodeLock/RSS/index.html
@@ -23,7 +23,7 @@
                 <i class="icon-list"></i>
             </a>
 
-            <h1 class="header-title">Feeds</h1>
+            <h1 class="header-title">загрузка..</h1>
         </div>
 
         <div class="slide-menu">
