--- a/CodeLock/RSS/index.html
+++ b/CodeLock/RSS/index.html
@@ -16,6 +16,9 @@
         <script src="jasmine/lib/jasmine-2.1.2/jasmine.js"></script>
         <script src="jasmine/lib/jasmine-2.1.2/jasmine-html.js"></script>
         <script src="jasmine/lib/jasmine-2.1.2/boot.js"></script>
+        <style>
+            .label  {padding: 10px;}
+        </style>
     </head>
     <body class="menu-hidden">
         <div class="header">
