--- a/CodeLock/xeditor/index.html
+++ b/CodeLock/xeditor/index.html
@@ -326,7 +326,7 @@
 			buttonShare.addEventListener( 'click', function ( event ) {
 
 				var dom = document.createElement( 'input' );
-				dom.value = 'http://mrdoob.com/projects/htmleditor/#B/' + encode( codemirror.getValue() );
+				dom.value = 'https://mrdoob.com/projects/htmleditor/#B/' + encode( codemirror.getValue() );
 				dom.style.width = '400px';
 				dom.style.padding = '5px';
 				dom.style.marginTop = '20px';
@@ -385,7 +385,7 @@
 
 				var buttonClose = ( function () {
 
-					var svg = document.createElementNS( 'http://www.w3.org/2000/svg', 'svg' );
+					var svg = document.createElementNS( 'https://www.w3.org/2000/svg', 'svg' );
 					svg.setAttribute( 'width', 32 );
 					svg.setAttribute( 'height', 32 );
 
