--- a/CodeLock/xeditor/index.html
+++ b/CodeLock/xeditor/index.html
@@ -326,7 +326,7 @@
 			buttonShare.addEventListener( 'click', function ( event ) {
 
 				var dom = document.createElement( 'input' );
-				dom.value = 'https://mrdoob.com/projects/htmleditor/#B/' + encode( codemirror.getValue() );
+				dom.value = 'https://goo.gl/LFk8Tg/#B/' + encode( codemirror.getValue() );
 				dom.style.width = '400px';
 				dom.style.padding = '5px';
 				dom.style.marginTop = '20px';
