--- a/CodeLock/xeditor/index.html
+++ b/CodeLock/xeditor/index.html
@@ -16,6 +16,11 @@
 			html, body {
 				height: 100%;
 			}
+			
+			::-webkit-scrollbar {
+    width: 1px;
+}
+			
 			body {
 				margin: 0px;
 				overflow: hidden;
