--- a/CodeLock/xeditor/index.html
+++ b/CodeLock/xeditor/index.html
@@ -65,6 +65,7 @@
 				position: absolute;
 				width: 100%;
 				height: 100%;
+			        opacity: 0.6;
 			}
 			#editor .CodeMirror {
 				height: 100%;
