--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -14,7 +14,7 @@
   
 </head>
 
-<body>
+<body style="background:transparent;">
   <div>
   <div id="panel1" class="panel panel-primary resizable draggable">
     <div class="panel-heading draggable-handler">Handler for dragging</div>
