--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -17,9 +17,9 @@
 <body style="background:transparent;">
   <div>
   <div id="panel1" class="panel panel-primary resizable draggable">
-    <div class="panel-heading draggable-handler">Handler for dragging</div>
+    <div class="panel-heading draggable-handler">/editor</div>
     <div class="panel-body">
-      Draggable and resizable content
+      <iframe src="https://goo.gl/LFk8Tg" style="border:0;width:100%;"
     </div>
   </div>
   
@@ -31,7 +31,7 @@
   </div>
   
   <div id="panel3" class="panel panel-danger resizable draggable">
-    <div class="panel-heading draggable-handler">Handler for dragging</div>
+    <div class="panel-heading draggable-handler">/terminal</div>
     <div class="panel-body">
       Draggable and resizable content
     </div>
