--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -19,7 +19,7 @@
   <div id="panel1" class="panel panel-primary resizable draggable">
     <div class="panel-heading draggable-handler">/editor</div>
     <div class="panel-body">
-      <iframe src="https://goo.gl/LFk8Tg" style="border:0;width:100%;"
+      <iframe src="https://goo.gl/LFk8Tg" style="border:0;width:100%;"><iframe>
     </div>
   </div>
   
