--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -24,9 +24,9 @@
   </div>
   
   <div id="panel2" class="panel panel-warning resizable draggable">
-    <div class="panel-heading draggable-handler">Handler for dragging</div>
+    <div class="panel-heading draggable-handler">Window</div>
     <div class="panel-body">
-      Draggable and resizable content
+      
     </div>
   </div>
   
