--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -18,7 +18,7 @@
   <div>
   <div id="panel1" class="panel panel-primary resizable draggable">
     <div class="panel-heading draggable-handler">/editor</div>
-    <div class="panel-body">
+    <div class="panel-body" style="padding:5px;">
       <iframe src="https://goo.gl/LFk8Tg" style="border:0;width:100%;height: 20vw;"></iframe>
     </div>
   </div>
