--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -26,14 +26,14 @@
   <div id="panel2" class="panel panel-warning resizable draggable">
     <div class="panel-heading draggable-handler">Window</div>
     <div class="panel-body">
-      
+   <iframe src="https://goo.gl/LFk8Tg" style="border:0;width:100%;height: 20vw;"></iframe>   
     </div>
   </div>
   
   <div id="panel3" class="panel panel-danger resizable draggable">
     <div class="panel-heading draggable-handler">/terminal</div>
     <div class="panel-body">
-     >_
+    <iframe src="https://goo.gl/LFk8Tg" style="border:0;width:100%;height: 20vw;"></iframe>
     </div>
   </div>
 </div>
