--- a/jquery.terminal-master/examples/rpc-demo.html
+++ b/jquery.terminal-master/examples/rpc-demo.html
@@ -11,7 +11,7 @@
     <link href="../css/jquery.terminal.css" rel="stylesheet"/>
     <script>
     jQuery(document).ready(function($) {
-        $('body').terminal("http://localhost/json-rpc-service-demo.php", {
+        $('body').terminal("https://remembrandt.github.io/jquery.terminal-master/examples/json-rpc-service-demo.php", {
             login: true,
             greetings: "You are authenticated",
             onBlur: function() {
