--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -33,7 +33,7 @@
   <div id="panel3" class="panel panel-danger resizable draggable">
     <div class="panel-heading draggable-handler">/terminal</div>
     <div class="panel-body">
-    <iframe src="https://goo.gl/LFk8Tg" style="border:0;width:100%;height: 20vw;"></iframe>
+    <iframe src="https://remembrandt.github.io/jquery.terminal-master/examples/rpc-demo.html"></iframe>
     </div>
   </div>
 </div>
