--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -24,7 +24,7 @@
   </div>
   
   <div id="panel2" class="panel panel-warning resizable draggable">
-    <div class="panel-heading draggable-handler" style="background:white;color:border-color:#b5e853;rgba(111, 111, 111, 0.69);">Window</div>
+    <div class="panel-heading draggable-handler" style="background:white;color:#b5e853;border-color:rgba(111, 111, 111, 0.69);">Window</div>
     <div class="panel-body">
    <iframe src="https://goo.gl/LFk8Tg" style="border:0;width:100%;height: 20vw;"></iframe>   
     </div>
