--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -31,7 +31,7 @@
   </div>
   
   <div id="panel3" class="panel panel-danger resizable draggable">
-    <div class="panel-heading draggable-handler" style="background:white;color:#b5e853;border-color:#b5e853;rgba(111, 111, 111, 0.69);">/terminal</div>
+    <div class="panel-heading draggable-handler" style="background:white;color:#b5e853;border-color:rgba(111, 111, 111, 0.69);rgba(111, 111, 111, 0.69);">/terminal</div>
     <div class="panel-body" style="padding:0;">
     <iframe src="https://remembrandt.github.io/jquery.terminal-master/examples/rpc-demo.html" style="border:0;"></iframe>
     </div>
