--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -17,21 +17,21 @@
 <body style="background:transparent;">
   <div>
   <div id="panel1" class="panel panel-primary resizable draggable">
-    <div class="panel-heading draggable-handler" style="background:white;color:#b5e853;border-color:rgba(111, 111, 111, 0.69);rgba(111, 111, 111, 0.69);">/editor</div>
+    <div class="panel-heading draggable-handler" style="background:white;color:#b5e853;border-color:transparent;rgba(111, 111, 111, 0.69);">/editor</div>
     <div class="panel-body" style="padding:2px;">
       <iframe src="https://goo.gl/LFk8Tg" style="border:0;width:100%;height: 20vw;"></iframe>
     </div>
   </div>
   
   <div id="panel2" class="panel panel-warning resizable draggable">
-    <div class="panel-heading draggable-handler" style="background:white;color:#b5e853;border-color:rgba(111, 111, 111, 0.69);">Window</div>
+    <div class="panel-heading draggable-handler" style="background:white;color:#b5e853;border-color:transparent;">Window</div>
     <div class="panel-body">
    <iframe src="https://goo.gl/LFk8Tg" style="border:0;width:100%;height: 20vw;"></iframe>   
     </div>
   </div>
   
   <div id="panel3" class="panel panel-danger resizable draggable">
-    <div class="panel-heading draggable-handler" style="background:white;color:#b5e853;border-color:rgba(111, 111, 111, 0.69);rgba(111, 111, 111, 0.69);">/terminal</div>
+    <div class="panel-heading draggable-handler" style="background:white;color:#b5e853;border-color:transparent;">/terminal</div>
     <div class="panel-body" style="padding:0;">
     <iframe src="https://remembrandt.github.io/jquery.terminal-master/examples/rpc-demo.html" style="border:0;"></iframe>
     </div>
