--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -26,7 +26,7 @@
   <div id="panel2" class="panel panel-warning resizable draggable">
     <div class="panel-heading draggable-handler" style="background:white;color:#b5e853;border-color:transparent;">Window</div>
     <div class="panel-body">
-   <iframe src="https://goo.gl/LFk8Tg" style="border:0;width:100%;height: 20vw;"></iframe>   
+   <iframe src="https://threejs.org/editor/" style="border:0;width:100%;height: 20vw;"></iframe>   
     </div>
   </div>
   
