--- a/CodeLock/xeditor/index.html
+++ b/CodeLock/xeditor/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="editor.appcache">
+<html>
 	<head>
 		<title>editor</title>
 		<link rel="stylesheet" href="js/codemirror/codemirror.css">
