--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -10,6 +10,11 @@
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
+  <style>
+    .panel {
+    background-color: rgba(216, 255, 0, 0.5);
+    }
+  </style>
 
   
 </head>
