--- a/cxzxz/index.html
+++ b/cxzxz/index.html
@@ -38,7 +38,7 @@
   <div id="panel3" class="panel panel-danger resizable draggable">
     <div class="panel-heading draggable-handler" style="background:white;color:#b5e853;border-color:transparent;">/terminal</div>
     <div class="panel-body" style="padding:0;">
-    
+    <iframe src="https://remembrandt.github.io/jquery.terminal-master/examples/rpc-demo.html" style="border:0;"></iframe>
     </div>
   </div>
 </div>
