--- a/viz/index.html
+++ b/viz/index.html
@@ -6,9 +6,9 @@
   <script src="js/visualizer.js"></script>
 </head>
 <body>
-  <label id="file-input">
+  <!--<label id="file-input">
     <input type="file" onchange="setAudio(this.files[0])" accept="audio/*"/>
-  </label>
+  </label>-->
   <canvas id="canvas" style="background: white"></canvas>
   <div id="controls">
     <button id="play-pause" data-action="play-pause"></button>
