--- a/v/index.html
+++ b/v/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Визуализация</title>
-  
+  <script src="//remembrandt.github.io/viz/js/visualizer.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
   
