--- a/viz/index.html
+++ b/viz/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Audio face visualizer</title>
+  <title>visualizer</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/audio-player.js"></script>
   <script src="js/visualizer.js"></script>
